# WLM-World-Model-Interpreter

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg
src/wlm_world_model_interpreter/: affordances.py  spatial.py  temporal.py  utils.py  world_model_interpreter.py
