[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wlm-world-model-interpreter"
version = "0.2.0"
description = "World Model Output → Dimensional Structure."
authors = [{ name = "Wujie Gu" }]
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }

[project.urls]
Homepage = "https://github.com/gavingu2255-ai/WLM-World-Model-Interpreter"
