[metadata]
name = wlm-world-model-interpreter
version = 0.2.0
description = World Model Output → Dimensional Structure.
author = Wujie Gu
license = MIT
license_files = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.9

[options.packages.find]
where = src
